# facieai

./: .env  .env.example  docker-compose.yml  facieai-key.pem  id_rsa  id_rsa.pub  pyproject.toml  test_main.http
app/: Dockerfile  dependencies.py  main.py
app/core/: app_settings.py  config_base.py
app/db/: __init__.py  dynamodb.py  s3.py
app/router/: __init__.py  friend.py  health.py
app/schema/: __init__.py  friend.py
app/service/: __init__.py  friend.py  llm.py
app/tests/: test_friend_router.py
app/util/: __init__.py  exceptions.py
bot/: Dockerfile  config.py  main.py  readme.md
serverless/.serverless/: meta.json
