[project]
name = "facieai"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Grinyov",email = "nikita3grynov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "fastapi (>=0.120.0,<0.121.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "boto3 (>=1.40.59,<2.0.0)",
    "alembic (>=1.17.0,<2.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "python-telegram-bot (>=22.5,<23.0)",
    "aiogram (>=3.22.0,<4.0.0)",
    "openai (>=2.6.1,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "awscli (>=1.42.59,<2.0.0)",
    "mangum (>=0.19.0,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
